# octiv-booker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  book.py  commands.md  dev-notes.md  devcontainer.json  justfile  poetry.Dockerfile  pyproject.toml  update_chromedriver_version.sh
.github/: dependabot.yml  release.yml
.github/actions/bump-docker-version/: action.yaml  readme.md
.github/hooks/: runner-generator.py  runner-template.yaml  update-chromedriver.py
.github/scripts/: update_chromedriver_version.sh  update_runner_docker_version.py
.github/workflows/: CD_build-and-push-on-merge.yml  CD_deployment.yml  CD_release.yml  CI_build-on-pr.yml  build-and-push-on-merge.yml  build-and-push-to-dockerhub.yml  build-and-push-to-dockerhub_latest.yml  build-and-push-to-dockerhub_version.yml  build-and-push.yml  build-on-pr.yml  callable-runner.yaml  callable.yaml  cd-release.yaml  cd.yaml  cd.yml  ci.yaml  create-release.yaml  dependabot-automation.yml  dependabot.yaml  push-docker.yml  push-to-registry.yml  run-on-schedule-1730.yml  run-on-schedule-1900.yml  run-on-schedule.yml  runner-1730.yaml  runner-1900.yaml  runner-callable.yaml  terraform-apply.yml  terraform-destroy.yml
hooks/: runner-generator.py  runner-template.yaml
infrastructure/: backend.tf  data.tf  locals.tf  main.tf  variables.tf
infrastructure/aws_EC2/: backend.tf  data.tf  ec2.tf  instance.sh  locals.tf  main.tf  output.tf  providers.tf  variables.tf
infrastructure/aws_EC2/modules/bootstrap/: bootstrap.tf  bootstrap_variables.tf
infrastructure/aws_EC2/modules/iam/: main.tf  output.tf
infrastructure/aws_EC2/modules/network/: main.tf  output.tf
infrastructure/aws_ecs/: backend.tf  data.tf  ec.tf  locals.tf  main.tf
infrastructure/aws_lambda/: backend.tf  data.tf  locals.tf  main.tf  providers.tf  variables.tf
infrastructure/aws_lambda/registry.terraform.io/kreuzwerker/docker/2.15.0/darwin_amd64/: README.md
logs/: config.yaml
slotBooker/: Dockerfile  dvenv.Dockerfile  poetry.Dockerfile  poetry2.Dockerfile  pyproject.toml  requirements.txt  set-credentials.sh  test.py  venv.Dockerfile
slotBooker/slotbooker/: alerts_and_errors.py  booker.py  booker_dev.py  classes.yaml  config.yaml  driver.py  error_and_warnings.py  gmail.py  helper_functions.py  logging.py  ui_interaction.py
slotBooker/slotbooker/utils/: config.yaml  driver.py  gmail.py  html_format.py  settings.py
slotBooker/tests/: test_booker.py  test_helper_functions.py  test_slotbooker.py  test_ui_interaction.py
src/data/: classes.yaml
src/data/1900/charly/: classes.yaml
src/slotbooker/: alert_error_handler.py  alerts_and_errors.py  book.py  booker.py  booker_dev.py  booking_handler.py  helper_functions.py  main.py  main_dev.py  slotbooker.py  ui_interaction.py  warning_prompt_helper.py
src/slotbooker/data/: classes.yaml
src/slotbooker/data/1900/ulrike/: classes.yaml
src/slotbooker/data/dev/: template_classes.yaml
src/slotbooker/data/prod/1730/charly/: classes.yaml
src/slotbooker/data/prod/charly/: classes.yaml
src/slotbooker/notifications/: mailing.py
src/slotbooker/notifications/html-templates/: template_unsuccessful_booking.html
src/slotbooker/utils/: alerts.py  config.yaml  custom_logger.py  dev.book.py  driver.py  gmail.py  helpers.py  html_format.py  html_format2.py  log_handler.py  logging.py  mail_handler.py  mailhandler.py  selenium_manager.py  seleniumhandler.py  settings.py  test.py  webdriver.py  webdriver_manager.py  xpaths.py
src/slotbooker/utils/html/: template_neutral_booking.html
src/slotbooker/utils/html-templates/: template_successful_booking.html  template_unsuccessful_booking.html
src/tests/: test_alerts_and_errors.py  test_helper_functions.py  test_slotbooker.py  test_ui_interaction.py
tests/: test_alerts_and_errors.py  test_helper_functions.py  test_ui_interaction.py
