[tool.poetry]
name = "slotBooker"
version = "1.5.0"
description = ""
authors = ["Sebastian Blum <hello@seblum.com>"]
packages = [{include = "slotbooker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.3.0"
DateTime = "^4.5"
PyYAML = "^6.0"
tqdm = "^4.64.0"
termcolor = "^2.3.0"
poetry-plugin-dotenv = "^2.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ruff = "^0.0.250"


[tool.poetry.scripts]
slotBooker = "slotbooker.booker:main"
slotBookerDev = "slotbooker.booker_dev:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "C", "N", "Q"]
ignore = ["E501"]  # ignore line length for example
line-length = 88

# Exclude some directories from linting
exclude = ["migrations", "node_modules", "venv"]
# Configure fix options
# fixable = true
# # Configure per-file-ignores
# per-file-ignores = [
#     "tests/test_*.py: F401, F403"
# ]