[tool.poetry]
name = "slotBooker"
version = "1.1.0"
description = ""
authors = ["Sebastian Blum <hello@seblum.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
DateTime = "^4.5"
PyYAML = "^6.0"
tqdm = "^4.64.0"
termcolor = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
slotBooker = "slotbooker.booker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
