[tool.poetry]
name = "slotBooker"
version = "1.5.0"
description = ""
authors = ["Sebastian Blum <hello@seblum.com>"]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.3.0"
DateTime = "^4.5"
PyYAML = "^6.0"
tqdm = "^4.64.0"
termcolor = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ruff = "^0.0.241"


[tool.poetry.scripts]
slotBooker = "slotbooker.booker:main"
slotBookerDev = "slotbooker.booker_dev:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# List of enabled rules
select = ["E", "F", "W", "C", "N", "Q"]
# List of disabled rules
ignore = ["E501"]  # ignore line length for example
# Maximum line length
line-length = 88
# Exclude some directories from linting
exclude = ["migrations", "node_modules", "venv"]
# Configure fix options
# fixable = true
# # Configure per-file-ignores
# per-file-ignores = [
#     "tests/test_*.py: F401, F403"
# ]